--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.19.27",
+    "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
+    "expo-router": "^2.0.4",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -28,10 +29,10 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
@@ -42,7 +43,7 @@
     "@types/react": "~18.2.14",
     "@types/react-native-dotenv": "^0.2.2",
     "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest-expo": "^49.0.0",
     "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
