--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/clerk-expo": "^0.19.27",
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
