--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.4",
     "expo-secure-store": "~12.3.1",
