--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "DiaLog",
+    "name": "dialog",
     "slug": "dialog",
     "version": "1.0.9_stable",
     "orientation": "portrait",
