--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "DiaLog",
     "slug": "dialog",
-    "version": "1.1.3",
+    "version": "1.1.4_beta",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
