--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cG93ZXJmdWwtYm9hLTQ1LmNsZXJrLmFjY291bnRzLmRldiQ
+
+EXPO_PUBLIC_API_URL=http://192.168.1.164:3000/
