add datepicker and timepicker components in add_blood_sugar_modal

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cG93ZXJmdWwtYm9hLTQ1LmNsZXJrLmFjY291bnRzLmRldiQ
 
+# localhost connection
 EXPO_PUBLIC_API_URL=http://192.168.1.164:3000/
+
+# remote server connection
+# EXPO_PUBLIC_API_URL=http://192.168.1.164:3000/
