--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/clerk-expo": "^0.19.27",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.7",
     "expo": "~49.0.15",
@@ -34,6 +35,7 @@
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -46,6 +48,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "~18.2.14",
     "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-native-modern-datepicker": "^1.0.5",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "react-native-dotenv": "^3.4.9",
