--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.7",
     "expo": "~49.0.15",
+    "expo-clipboard": "~4.3.1",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "^12.5.0",
     "expo-linking": "~5.0.2",
@@ -41,8 +42,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "zustand": "^4.4.7",
-    "expo-clipboard": "~4.3.1"
+    "socket.io-client": "^4.7.5",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
